<resources>
    <string name="app_name">Around Me</string>

    <string name="accounting">Accounting</string>
    <string name="airport">Airport</string>
    <string name="amusement_park">Amusement_Park</string>
    <string name="aquarium">Aquarium</string>
    <string name="art_gallery">Art_Gallery</string>
    <string name="atm">Atm</string>
    <string name="bakery">Bakery</string>
    <string name="bank">Bank</string>
    <string name="bar">Bar</string>
    <string name="beauty_salon">Beauty_Salon</string>
    <string name="bicycle_store">Bicycle_Store</string>
    <string name="book_store">Book_Store</string>
    <string name="bowling_alley">Bowling_Alley</string>
    <string name="bus_station">Bus_Station</string>
    <string name="cafe">Cafe</string>
    <string name="campground">Campground</string>
    <string name="car_dealer">Car_Dealer</string>
    <string name="car_rental">Car_Rental</string>
    <string name="car_repair">Car_Repair</string>
    <string name="car_wash">Car_Wash</string>
    <string name="casino">Casino</string>
    <string name="cemetery">Cemetery</string>
    <string name="church">Church</string>
    <string name="city_hall">City_Hall</string>
    <string name="clothing_store">Clothing_Store</string>
    <string name="convenience_store">Convenience_Store</string>
    <string name="courthouse">Courthouse</string>
    <string name="dentist">Dentist</string>
    <string name="department_store">Department_Store</string>
    <string name="doctor">Doctor</string>
    <string name="electrician">Electrician</string>
    <string name="electronics_store">Electronics_Store</string>
    <string name="embassy">Embassy</string>
    <string name="fire_station">Fire_Station</string>
    <string name="florist">Florist</string>
    <string name="funeral_home">Funeral_Home</string>
    <string name="furniture_store">Furniture_Store</string>
    <string name="gas_station">Gas_Station</string>
    <string name="gym">Gym</string>
    <string name="hair_care">Hair_Care</string>
    <string name="hardware_store">Hardware_Store</string>
    <string name="hindu_temple">Hindu_Temple</string>
    <string name="home_goods_store">Home_Goods_Store</string>
    <string name="hospital">Hospital</string>
    <string name="insurance_agency">Insurance_Agency</string>
    <string name="jewelry_store">Jewelry_Store</string>
    <string name="laundry">Laundry</string>
    <string name="lawyer">Lawyer</string>
    <string name="library">Library</string>
    <string name="liquor_store">Liquor_Store</string>
    <string name="local_government_office">Local_Government_office</string>
    <string name="locksmith">Locksmith</string>
    <string name="lodging">Lodging</string>
    <string name="meal_delivery">Meal_Delivery</string>
    <string name="meal_takeaway">Meal_Takeaway</string>
    <string name="mosque">Mosque</string>
    <string name="movie_rental">Movie_Rental</string>
    <string name="movie_theater">Movie_Theater</string>
    <string name="moving_company">Moving_Company</string>
    <string name="museum">Museum</string>
    <string name="night_club">Night_Club</string>
    <string name="painter">Painter</string>
    <string name="park">Park</string>
    <string name="parking">Parking</string>
    <string name="pet_store">Pet_Store</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="physiotherapist">Physiotherapist</string>
    <string name="plumber">Plumber</string>
    <string name="police">Police</string>
    <string name="post_office">Post_Office</string>
    <string name="real_estate_agency">Real_Estate_Agency</string>
    <string name="restaurant">Restaurant</string>
    <string name="roofing_contractor">Roofing_Contractor</string>
    <string name="rv_park">RV_Park</string>
    <string name="school">School</string>
    <string name="shoe_store">Shoe_Store</string>
    <string name="shopping_mall">Shopping_Mall</string>
    <string name="spa">SPA</string>
    <string name="stadium">Stadium</string>
    <string name="storage">Storage</string>
    <string name="store">Store</string>
    <string name="subway_station">Subway_Station</string>
    <string name="synagogue">Synagogue</string>
    <string name="taxi_stand">Taxi_Stand</string>
    <string name="train_station">Train_Station</string>
    <string name="transit_station">Transit_Station</string>
    <string name="travel_agency">Travel_Agency</string>
    <string name="university">University</string>
    <string name="veterinary_care">Veterinary_Care</string>
    <string name="zoo">Zoo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_place_list_on_map">PlaceListOnMap</string>
    <string name="small_location_icon">Small Location Icon</string>
    <string name="small_call_icon">Small Call Icon</string>
    <string name="small_website_icon">Small Website Icon</string>
    <string name="small_location_status_icon">Small Location Status Icon</string>
    <string name="no_review_found">No Review Found</string>
    <string name="location_icon">Location Icon</string>
    <string name="place_list_icon">Place List Icon</string>
    <string name="near_by_tag">Near By </string>
    <string name="no_near_by_tag">No Near By</string>
    <string name="no_near_by_place_found">No Near By Place Found</string>
    <string name="favourite_icon">Favourite Icon</string>
    <string name="website_icon">Website Icon</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="call">CALL</string>
    <string name="website">WEBSITE</string>
    <string name="favourite">FAVOURITE</string>
    <string name="place_icon">Place Icon</string>
    <string name="share_button">Share Button</string>
    <string name="list_tag">List</string>
    <string name="found">Found</string>
    <string name="open_now">Open Now</string>
    <string name="closed">Closed</string>
    <string name="place_added_to_favourite_string">Place Added to Favourite List</string>
    <string name="place_removed_to_favourite_string">Place removed from Favourite List</string>
    <string name="username">Username</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="favourite_menu_item">Favourite</string>
    <string name="menu_search">Search Place</string>
    <string name="search_hint">Hotel, Bakery, Hair Care</string>
    <string name="search_result_string">Search Result</string>
    <string name="about_string">ABOUT</string>
    <string name="review_string">REVIEW</string>
    <string name="call_permission_title">Call Permission</string>
    <string name="call_permission_message">Hi there! We can\'t call anyone without the call permission, could you please grant it?</string>
    <string name="yes">Yes</string>
    <string name="no">No thanks</string>
    <string name="location_permission_title">Location Permission</string>
    <string name="location_permission_message">Hi there! We can\'t get Near By Location without location permission, could you please grant it?</string>
    <string name="website_not_registered_string">Website not Registered</string>
    <string name="phone_number_not_registered_string">Phone Number not Registered</string>
    <string name="favourite_place_list_string">Favourite Place List</string>
    <string name="share_link_string">Share Link</string>
    <string name="turn_on_gps_message">Please Turn on GPS</string>
    <string name="launcher_icon">Launcher Icon</string>
    <string name="no_connection_string">No Internet Connection</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="version_text">Version 1.0</string>
    <string name="developed_by_text">Developed By: Chandan Sharma</string>

    <string name="gps_permission_title">Turn On GPS</string>
    <string name="gps_permission_message">Hi there! Please turn on GPS to detect current location.</string>
    <string name="retry">Retry</string>
</resources>