<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@android:color/white"
    tools:context="me.chandansharma.aroundme.ui.SplashScreenActivity">

    <ImageView
        android:id="@+id/launcher_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/launcher_icon"
        android:src="@drawable/icon"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/launcher_icon"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/color_primary_text"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/version_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/version_text"
        android:textColor="@color/color_secondary_text"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version_number"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/developed_by_text"
        android:textColor="@color/color_secondary_text"
        android:textSize="16sp"/>

</RelativeLayout>