<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/location_phone_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/phone_icon"
                android:src="@drawable/ic_call_white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/color_primary"
                android:text="@string/call"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/location_website_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/website_icon"
                android:src="@drawable/ic_public_white"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/website_icon"
                android:textAlignment="center"
                android:textColor="@color/color_primary"
                android:text="@string/website"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/location_favourite_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/favourite_icon"
                android:src="@drawable/ic_favorite_border_white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/color_primary"
                android:text="@string/favourite"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/small_location_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/small_location_icon"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_location_on_white"/>

        <TextView
            android:id="@+id/location_address_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/small_location_icon"
            android:layout_toRightOf="@+id/small_location_icon"
            android:textSize="16sp"
            tools:text="Maninagr Mogrwadi, Valsad - 396001"/>

        <ImageView
            android:id="@+id/small_phone_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/location_address_text_view"
            android:contentDescription="@string/small_call_icon"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_call_white"/>


        <TextView
            android:id="@+id/location_phone_number_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_address_text_view"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/small_phone_icon"
            android:layout_toRightOf="@id/small_phone_icon"
            android:maxLines="1"
            android:textSize="16sp"
            tools:text="+91 2632 224585"/>

        <ImageView
            android:id="@+id/small_website_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/location_phone_number_text_view"
            android:contentDescription="@string/small_website_icon"
            android:padding="8dp"
            android:src="@drawable/ic_public_white"/>

        <TextView
            android:id="@+id/location_website_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_phone_number_text_view"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/small_website_icon"
            android:layout_toRightOf="@id/small_website_icon"
            android:maxLines="1"
            android:textSize="16sp"
            tools:text="www.chandansharma.me"/>

        <ImageView
            android:id="@+id/small_location_status_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/location_website_text_view"
            android:contentDescription="@string/small_location_status_icon"
            android:padding="8dp"
            android:src="@drawable/ic_access_time_white"/>

        <TextView
            android:id="@+id/location_status_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_website_text_view"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/small_location_status_icon"
            android:layout_toRightOf="@id/small_location_status_icon"
            android:maxLines="1"
            android:textSize="16sp"
            tools:text="Open Now"/>
    </RelativeLayout>

</LinearLayout>